--- a/QuickChat/app/src/main/res/values/strings.xml
+++ b/QuickChat/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Quick Chat</string>
+    <string name="sign_in">Sign In</string>
+    <string name="no_account">Don\'t have an account? Sign Up</string>
+    <string name="already_have_account">Already have an account? Sign In</string>
 </resources>
