--- a/QuickChat/app/src/main/res/values/strings.xml
+++ b/QuickChat/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Quick Chat</string>
     <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="add_channel">Add Channel</string>
+    <string name="add">Add</string>
+    <string name="channel_name">Channel Name</string>
     <string name="no_account">Don\'t have an account? Sign Up</string>
     <string name="already_have_account">Already have an account? Sign In</string>
+    <string name="type_message">Type a message</string>
 </resources>
